; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_generic.c_generic_mkdirat.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_generic.c_generic_mkdirat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32 }
%struct.mount = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.mount*, i8*, i32)* }

@MAX_PATH = common dso_local global i32 0, align 4
@N_SYMLINK_FOLLOW = common dso_local global i32 0, align 4
@N_PARENT_DIR_WRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @generic_mkdirat(%struct.fd* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.fd*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.mount*, align 8
  store %struct.fd* %0, %struct.fd** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %13 = load i32, i32* @MAX_PATH, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %8, align 8
  %16 = alloca i8, i64 %14, align 16
  store i64 %14, i64* %9, align 8
  %17 = load %struct.fd*, %struct.fd** %5, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i32, i32* @N_SYMLINK_FOLLOW, align 4
  %20 = load i32, i32* @N_PARENT_DIR_WRITE, align 4
  %21 = or i32 %19, %20
  %22 = call i32 @path_normalize(%struct.fd* %17, i8* %18, i8* %16, i32 %21)
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* %10, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %3
  %26 = load i32, i32* %10, align 4
  store i32 %26, i32* %4, align 4
  store i32 1, i32* %11, align 4
  br label %40

27:                                               ; preds = %3
  %28 = call %struct.mount* @find_mount_and_trim_path(i8* %16)
  store %struct.mount* %28, %struct.mount** %12, align 8
  %29 = load %struct.mount*, %struct.mount** %12, align 8
  %30 = getelementptr inbounds %struct.mount, %struct.mount* %29, i32 0, i32 0
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i32 (%struct.mount*, i8*, i32)*, i32 (%struct.mount*, i8*, i32)** %32, align 8
  %34 = load %struct.mount*, %struct.mount** %12, align 8
  %35 = load i32, i32* %7, align 4
  %36 = call i32 %33(%struct.mount* %34, i8* %16, i32 %35)
  store i32 %36, i32* %10, align 4
  %37 = load %struct.mount*, %struct.mount** %12, align 8
  %38 = call i32 @mount_release(%struct.mount* %37)
  %39 = load i32, i32* %10, align 4
  store i32 %39, i32* %4, align 4
  store i32 1, i32* %11, align 4
  br label %40

40:                                               ; preds = %27, %25
  %41 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %41)
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @path_normalize(%struct.fd*, i8*, i8*, i32) #2

declare dso_local %struct.mount* @find_mount_and_trim_path(i8*) #2

declare dso_local i32 @mount_release(%struct.mount*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
